--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -35,7 +35,7 @@
 		<hr>
 
 		<h3><strong>Question 1</strong></h3>
-		<h4>You feel a work/life balance is crutial to a successful life.</h4>
+		<h4>You feel work/life balance is crutial to a successful life.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q1">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -58,7 +58,7 @@
 
 
 		<h3><strong>Question 3</strong></h3>
-		<h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
+		<h4>It's important to spend a portion of your free time working in fields unrelated to your current work.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q3">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -69,7 +69,7 @@
       	</select>
 
 
-		<h3><strong>Question 4</strong></h3>
+		<!-- <h3><strong>Question 4</strong></h3>
 		<h4>You rarely do something just out of sheer curiosity.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q4">
 	 		<option value=""></option>
@@ -147,7 +147,7 @@
             <option value="3">3</option>
             <option value="4">4</option>
             <option value="5">5 (Strongly Agree)</option>
-      	</select>
+      	</select> -->
 
 		<br>
 		<br>
@@ -186,6 +186,78 @@
 
 	  </div>
 	</div>
+
+	<script type="text/javascript">
+
+  	// Chosen CSS
+    var config = {
+      '.chosen-select'           : {},
+      '.chosen-select-deselect'  : {allow_single_deselect:true},
+      '.chosen-select-no-single' : {disable_search_threshold:10},
+      '.chosen-select-no-results': {no_results_text:'Oops, nothing found!'},
+      '.chosen-select-width'     : {width:"95%"}
+    }
+    for (var selector in config) {
+      $(selector).chosen(config[selector]);
+    }
+
+    // Capture the form inputs
+    $("#submit").on("click", function(){
+
+    	// Form validation
+    	function validateForm() {
+		  var isValid = true;
+		  $('.form-control').each(function() {
+		    if ( $(this).val() === '' )
+		        isValid = false;
+		  });
+
+		  $('.chosen-select').each(function() {
+
+		  	if( $(this).val() === "")
+		  		isValid = false
+		  })
+		  return isValid;
+		}
+
+		// If all required fields are filled
+		if (validateForm() == true)
+		{
+			// Create an object for the user's data
+	    	var userData = {
+	    		name: $("#name").val(),
+	    		photo: $("#photo").val(),
+	    		scores: [$("#q1").val(), $("#q2").val(), $("#q3").val(), $("#q4").val(), $("#q5").val(), $("#q6").val(), $("#q7").val(), $("#q8").val(), $("#q9").val(), $("#q10").val(), ]
+	    	}
+
+
+	    	// Grab the URL of the website
+	    	var currentURL = window.location.origin;
+
+	    	// AJAX post the data to the friends API.
+	    	$.post(currentURL + "/api/friends", userData, function(data){
+					debugger;
+					console.log(data);
+
+	    		// // Grab the result from the AJAX post so that the best match's name and photo are displayed.
+	    		// $("#matchName").text(data.name);
+	    		// $('#matchImg').attr("src", data.photo);
+					//
+		    	// // Show the modal with the best match
+		    	// $("#resultsModal").modal('toggle');
+
+	    	});
+		}
+		else
+		{
+			alert("Please fill out all fields before submitting!");
+		}
+
+    	return false;
+    });
+
+
+  </script>
 
 </body>
 </html>
