--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -159,7 +159,7 @@
 		<hr>
 	    <footer class="footer">
 	      <div class="container">
-		        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a></p>
+		        <p><a href="/api">API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a></p>
 	      </div>
 	    </footer>
 
@@ -180,7 +180,7 @@
 	        <img id="matchImg" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg" alt="">
 	      </div>
 	      <div class="modal-footer">
-	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	        <button type="button" class="btn btn-default" data-dismiss="modal"><a href='/api'>Close</a></button>
 	      </div>
 	    </div>
 
